# llm-in-a-box-template

./: .env_template  .gitignore  .gitmodules  DIAGRAM.md  LOCALDNS.md  Makefile  QUICKSTART.md  README.md  cookiecutter.json  docker-compose.yml  generate-env.sh  paper.bib  paper.md  public-age-keys.txt  pyproject.toml
.github/workflows/: render-pdf.yml
docs/: DIAGRAM.md  LOCALDNS.md  QUICKSTART.md  THOUGHTS.md  cilogon-integration.md  paper.md  setup-advanced-k3s-fluxcd.md
scripts/: handle-dev-secrets.sh  secops_config.sh
services/keykloak/: Dockerfile
services/llm-router/: google_vertexai.json.enc  litellm_config.yml
services/model-server/: README.md
services/proxy/rules/: middlewares.yml
{{cookiecutter.project_slug}}/: .env.enc  Makefile  docker-compose.yml  generate-env.sh  pyproject.toml  yamllintconfig.yaml
{{cookiecutter.project_slug}}/scripts/: secops_config.sh
{{cookiecutter.project_slug}}/services/llm-router/: google_vertexai.json  google_vertexai.json.enc
{{cookiecutter.project_slug}}/services/model-server/: README.md
{{cookiecutter.project_slug}}/services/proxy/rules/: middlewares-chains.yml  middlewares.yml
