[project]
name = "llm-in-a-box-template"
version = "1.0.0"
description = "LLM in a box template"
authors = [{ name = "Georg Heiler", email = "heiler@csh.ac.at" }]
requires-python = ">= 3.13,< 3.14"

[tool.pixi.project]
platforms = ["linux-64", "osx-arm64", "win-64", "linux-aarch64"]
channels = ["conda-forge"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.environments]
secops = { features = ["secops"], solve-group = "secops" }
ci = { features = ["ci-basics"], solve-group = "ci" }
template = { features = ["template"], solve-group = "template" }

[tool.pixi.feature.ci-basics.dependencies]
yamllint = ">=1.35.1,<2"
taplo = ">=0.9.3,<0.11"

[tool.pixi.feature.template.dependencies]
cruft = "~=2.16.0"
cookiecutter = "~=2.6.0"

[tool.pixi.feature.template.pypi-dependencies]
jinja2-ospath = ">=0.3.0,<0.4.0"

[tool.pixi.feature.secops.dependencies]
go-sops = "~=3.9.4"
age = "~=1.2.1"


[tool.pixi.tasks.fmt]
cmd = "pixi run -e ci yamllint -c yamllintconfig.yaml . && taplo fmt"
description = "Format yaml & toml files"
env = { RUST_LOG = "warn" }

[tool.pixi.tasks.tpl-init-cruft]
cmd = "pixi run -e template cruft create https://github.com/complexity-science-hub/llm-in-a-box-template.git"
description = "Initialize template"


[tool.pixi.tasks.render-dev]
cmd = "pixi run --frozen -e template cruft create . --no-input --overwrite-if-exists --output-dir rendered-template && ./scripts/handle-dev-secrets.sh"
description = "locally render a development instance of the template"

[tool.pixi.tasks.start-template]
cmd = "pixi run --frozen -e template docker compose --profile llminabox --profile ollama-cpu --profile docling-cpu --profile vectordb-cpu up"
cwd = "rendered-template/llm_in_a_box"
description = "spin up the template"

[tool.pixi.tasks.secrets-encrypt]
cmd = "pixi run -e secops ./scripts/encrypt_secrets.sh"
description = "encrypt secrets with SOPS and AGE"

[tool.pixi.tasks.secrets-decrypt]
cmd = "pixi run -e secops ./scripts/decrypt_secrets.sh"
description = "decrypt secrets with SOPS and AGE"
