[project]
name = "{{ cookiecutter.project_slug }}"
version = "1.0.0"
description = "{{ cookiecutter.project_name }}"
authors = [{ name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}" }]
requires-python = ">=3.13,<3.14"

[tool.pixi.project]
platforms = ["linux-64", "osx-arm64", "win-64", "linux-aarch64"]
channels = ["conda-forge"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.environments]
template = { features = ["template"], solve-group = "template" }
ci-validation = { features = [
  "ci-basics",

], solve-group = "default" }
secops = { features = ["secops"], solve-group = "secops" }
dev = { features = [
  "ci-basics",
], solve-group = "default" }

[tool.pixi.feature.ci-basics.dependencies]
yamllint = ">=1.35.1,<2"
taplo = ">=0.9.3,<0.10"
pytest = ">=8.3.4,<9"
pytest-mock = ">=3.14.0,<4"
pytest-cov = "~=6.0.0"
ruff = ">=0.9.4,<1"
pyright = "~=1.1.393"
git = "~=2.47.1"

[tool.pixi.feature.ci-basics.pypi-dependencies]
moto = "~=5.0.28"
nbqa = "~=1.9.1"


[tool.pixi.feature.template.dependencies]
cruft = "~=2.16.0"

[tool.pixi.feature.template.pypi-dependencies]
jinja2-ospath = ">=0.3.0,<0.4.0"

[tool.pixi.feature.secops.dependencies]
go-sops = "~=3.9.4"
age = "~=1.2.1"

[tool.pixi.feature.secops.pypi-dependencies]

[tool.pixi.tasks]

[tool.pixi.tasks.fmt]
cmd = "pixi run -e ci-basics ruff format ./src && ruff check --fix ./src  && nbqa 'ruff format' src/* && yamllint -c yamllintconfig.yaml . && taplo fmt"
description = "Format python files"
env = { RUST_LOG = "warn" }

[tool.pixi.tasks.fmt-unsafe]
cmd = "pixi run -e ci-basics nbqa 'ruff format' src/* && ruff format ./src && nbqa ruff --fix --unsafe-fixes ./src/* && ruff check --fix --unsafe-fixes ./src && yamllint -c yamllintconfig.yaml . && taplo fmt"
description = "Format python files - apply automatic ruff unsafe fixes"

[tool.pixi.tasks.lint]
cmd = "ruff check ./src && yamllint -c yamllintconfig.yaml . && taplo check && pyright"
description = "Validate formatting and type check python files"

[tool.pixi.tasks.test]
cmd = "pytest --ignore=src/{{ cookiecutter.project_slug_pixi }}/code_location_{{ cookiecutter.project_slug_pixi }}_dbt/dbt_packages src"
description = "Validate formatting and type check python files"

[tool.pixi.tasks.tpl-update]
cmd = "pixi run -e template cruft update"
description = "Update from template"

[tool.pixi.tasks.cleanup-state]
cmd = "rm -rf {{ cookiecutter.state_path }}"
description = "clean state directory"

[tool.pixi.tasks.secrets-encrypt]
cmd = "pixi run -e secops ./scripts/encrypt_secrets.sh"
description = "encrypt secrets with SOPS and AGE"

[tool.pixi.tasks.secrets-decrypt]
cmd = "pixi run -e secops ./scripts/decrypt_secrets.sh"
description = "decrypt secrets with SOPS and AGE"

[tool.pixi.tasks.clean-local-branches]
cmd = "pixi run -e ci-basics ./scripts/git_clean_local_branches.sh"
description = "cleanup local non used branches"

[tool.ruff]
exclude = [
  ".git",
  "__pycache__",
  "docs/source/conf.py",
  "old",
  "build",
  "dist",
  ".pixi",
  "src/{{ cookiecutter.project_slug }}/code_location_{{ cookiecutter.project_slug }}_dbt/dbt_packages",
  "*.ipynb",
]

line-length = 88

[tool.ruff.lint]
ignore = ["E501"]
select = ["F", "E", "W", "C", "B", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.pyright]
include = [
  "src/code_location_{{ cookiecutter.project_slug }}",
]
exclude = [
  "src/code_location_{{ cookiecutter.project_slug }}/build",
]
pythonVersion = "3.13"
venvPath = ".pixi/envs"
venv = "ci-validation"
extraPaths = [
  "src/code_location_{{ cookiecutter.project_slug }}",
  "src/code_location_foo",
  "src/shared_library",
]

reportMissingTypeStubs = false
reportImportCycles = "error"
useLibraryCodeForTypes = true
typeCheckingMode = "standard"


reportArgumentType = "warning"
reportCallIssue = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"

[tool.taplo]
exclude = []